2013-01-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* image-mode.el (image-mode-winprops): Don't throw away the fallback
	`t' pseudo-window entry.

2013-01-09  Alan Mackenzie  <acm@muc.de>

	Fix bugs in the c-parse-state mechanism.  Reuse some markers
	instead of continually generating new ones.

	* progmodes/cc-engine.el (c-state-old-cpp-beg-marker)
	(c-state-old-cpp-end-marker): New variables.
	(c-append-lower-brace-pair-to-state-cache): Start a backward
	search for "}" definitively outside CPP constructs.
	(c-remove-stale-state-cache): Inform the caller of a need to
	search back for a brace pair in certain circumstances.
	(c-state-maybe-marker): New macro.
	(c-parse-state): Reuse markers when appropriate.

2013-01-09  Glenn Morris  <rgm@gnu.org>

	* simple.el (execute-extended-command): Doc fix.
	Bind prefix-arg around read-extended-command, for prompt.  (Bug#13395)

2013-01-09  Chong Yidong  <cyd@gnu.org>

	* faces.el (read-face-name): Doc fix.

2013-01-09  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/trace.el (trace-function, trace-function-background):
	Doc fix.

2013-01-09  Juri Linkov  <juri@jurta.org>

	* international/mule-cmds.el (read-char-by-name): Move let-binding
	of completion-ignore-case around completing-read to fix regression
	exhibited by the test case `C-x 8 RET *acc TAB' and caused by
	`string-match-p' using the nil value of `case-fold-search' and
	`completion-ignore-case' in `completion-pcm--all-completions'.
	(Bug#12615).

2013-01-07  Glenn Morris  <rgm@gnu.org>

	* progmodes/compile.el (compilation-parse-errors):
	Fix typo.  (Bug#13369)

2013-01-07  Vitalie Spinu  <spinuvit@gmail.com>  (tiny change)

	* comint.el (comint-send-input): Check size of buffer before
	waiting for process output, in case already accepted.  (Bug#13290)

2013-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-set-file-uid-gid): UID and GID must be
	non-negative integers.  Otherwise, the default values are used.